--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -36,8 +36,6 @@
     "import sys\n",
     "sys.path.insert(0, '../src/')\n",
     "import importlib\n",
-    "import HR_OT\n",
-    "importlib.reload(HR_OT)\n",
     "\n",
     "\n",
     "# Other misc imports\n",
@@ -51,7 +49,125 @@
     "from sklearn.cluster import KMeans\n",
     "import random\n",
     "from torch.distributions.multivariate_normal import MultivariateNormal\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import operator\n",
+    "import functools\n",
+    "from functools import reduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41386d75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class rank_annealing:\n",
+    "    \"\"\"\n",
+    "    Package for computing an optimal rank-annealing schedule for Hierarchical Refinement\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def optimal_rank_schedule(n, hierarchy_depth=6, max_Q=int(2**10), max_rank=16):\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        A function to compute the optimal rank-scheduler of refinement.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        n: int\n",
+    "            Size of the input dataset -- cannot be a prime number\n",
+    "        hierarchy_depth: int\n",
+    "            Maximal permissible depth of the multi-scale hierarchy\n",
+    "        max_Q: int\n",
+    "            Maximal rank at terminal base case (before reducing the \\leq max_Q rank coupling to a 1-1 alignment)\n",
+    "        max_rank: int\n",
+    "            Maximal rank at the intermediate steps of the rank-schedule\n",
+    "            \n",
+    "        \"\"\"\n",
+    "\n",
+    "        # Factoring out the max factor\n",
+    "        Q = max_factor_lX(n, max_Q)\n",
+    "        ndivQ = int(n / Q)\n",
+    "\n",
+    "        # Compute partial rank schedule up to Q\n",
+    "        min_value, rank_schedule = min_sum_partial_products_with_factors(ndivQ, hierarchy_depth, max_rank)\n",
+    "        rank_schedule.sort()\n",
+    "        rank_schedule.append(Q)\n",
+    "        rank_schedule = [x for x in rank_schedule if x != 1]\n",
+    "        \n",
+    "        print(f'Optimized rank-annealing schedule: { rank_schedule }')\n",
+    "        \n",
+    "        assert functools.reduce(operator.mul, rank_schedule) == n, \"Error! Rank-schedule does not factorize n!\"\n",
+    "        \n",
+    "        return rank_schedule\n",
+    "\n",
+    "    def factors(n):\n",
+    "        # Return list of all factors of an integer\n",
+    "        return set(reduce(\n",
+    "            list.__add__,\n",
+    "            ([i, n//i] for i in range(1, int(n**0.5) + 1) if n % i == 0)))\n",
+    "\n",
+    "    def max_factor_lX(n, max_X):\n",
+    "        # Find max factor of n , such that max_factor \\leq max_X\n",
+    "        factor_lst = factors(n)\n",
+    "        max_factor = 0\n",
+    "        for factor in factor_lst:\n",
+    "            if factor > max_factor and factor < max_X:\n",
+    "                max_factor = factor\n",
+    "        return max_factor\n",
+    "\n",
+    "    def min_sum_partial_products_with_factors(n, k, C):\n",
+    "        \"\"\"\n",
+    "        Dynamic program to compute the rank-schedule, subject to a constraint of intermediates being \\leq C\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        n: int\n",
+    "            The dataset size to be factored into a rank-scheduler. Assumed to be non-prime.\n",
+    "        k: int\n",
+    "            The depth of the hierarchy.\n",
+    "        C: int\n",
+    "            A constraint on the maximal intermediate rank across the hierarchy.\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        INF = float('inf')\n",
+    "        \n",
+    "        dp = [[INF]*(k+1) for _ in range(n+1)]\n",
+    "        choice = [[-1]*(k+1) for _ in range(n+1)]\n",
+    "        \n",
+    "        for d in range(1, n+1):\n",
+    "            if d <= C:\n",
+    "                dp[d][1] = d\n",
+    "                choice[d][1] = d\n",
+    "        \n",
+    "        for t in range(2, k+1):\n",
+    "            for d in range(1, n+1):\n",
+    "                if dp[d][t-1] == INF and t > 1:\n",
+    "                    pass\n",
+    "                \n",
+    "                for r in range(1, min(C,d)+1):\n",
+    "                    if d % r == 0:\n",
+    "                        candidate = r + r * dp[d // r][t-1]\n",
+    "                        if candidate < dp[d][t]:\n",
+    "                            dp[d][t] = candidate\n",
+    "                            choice[d][t] = r\n",
+    "        \n",
+    "        \n",
+    "        if dp[n][k] == INF:\n",
+    "            return None, []\n",
+    "        \n",
+    "        factors = []\n",
+    "        d_cur, t_cur = n, k\n",
+    "        \n",
+    "        while t_cur > 0:\n",
+    "            r_cur = choice[d_cur][t_cur]\n",
+    "            factors.append(r_cur)\n",
+    "            d_cur //= r_cur\n",
+    "            t_cur -= 1\n",
+    "        \n",
+    "        return dp[n][k], factors\n",
+    "\n"
    ]
   },
   {
@@ -1695,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "96da85a1-2329-417e-a7ca-1cbce5a4cd09",
    "metadata": {},
    "outputs": [
@@ -1711,8 +1827,6 @@
     }
    ],
    "source": [
-    "import rank_annealing\n",
-    "\n",
     "# 1. Making it even; remove 1 image\n",
     "embeddings = embeddings[1:,:]\n",
     "\n",
@@ -3562,7 +3676,6 @@
    ],
    "source": [
     "importlib.reload(rank_annealing)\n",
-    "importlib.reload(HR_OT)\n",
     "\n",
     "# Squared Euclidean cost p=2 or Euclidean if p=1\n",
     "p = 1\n",
@@ -3588,7 +3701,7 @@
     "print(rank_schedule)\n",
     "\n",
     "try:\n",
-    "    hrot_lr = HR_OT.HierarchicalRefinementOT.init_from_point_clouds(_X, _Y, rank_schedule, base_rank=1, device=device)\n",
+    "    hrot_lr = HierarchicalRefinementOT.init_from_point_clouds(_X, _Y, rank_schedule, base_rank=1, device=device)\n",
     "    del _X, _Y\n",
     "    F = hrot_lr.run(return_as_coupling=False)\n",
     "    cost_hrot_lr = hrot_lr.compute_OT_cost()\n",
