Start cleaning ImageNet.ipynb

--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -7,47 +7,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Any\n",
-    "\n",
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from ott.geometry import costs, pointcloud\n",
-    "\n",
-    "from ott.tools import sinkhorn_divergence\n",
-    "\n",
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "from ott.problems.linear import linear_problem\n",
-    "import numpy as np\n",
-    "\n",
-    "from typing import Any\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from ott.geometry import costs, pointcloud\n",
-    "from ott.problems.linear import linear_problem\n",
-    "from ott.tools import progot\n",
-    "\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "\n",
-    "# Other misc imports\n",
-    "import torch\n",
-    "import matplotlib.pyplot as plt\n",
     "from typing import List, Callable, Union, Dict, Any\n",
-    "import torch\n",
-    "\n",
-    "import torch\n",
-    "from sklearn.cluster import KMeans\n",
     "import random\n",
-    "import numpy as np\n",
-    "\n",
     "import operator\n",
     "import functools\n",
-    "from functools import reduce"
+    "from functools import reduce\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "from ott.geometry import costs, pointcloud\n",
+    "from ott.tools import sinkhorn_divergence, progot\n",
+    "from ott.problems.linear import linear_problem"
    ]
   },
   {
