--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -1889,6 +1889,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76817def",
+   "metadata": {},
+   "source": [
+    "# Fichier de base"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "4183767f-2bc6-46db-afad-28df24da209f",
