Start cleaning ImageNet.ipynb

--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -456,18 +456,18 @@
     "    for i in range(max_iter):\n",
     "        if balanced and not unbalanced:\n",
     "            # Balanced\n",
-    "            f_k = f_k + epsilon*(log_a - torch.logsumexp(Cost(f_k, g_k, grad, epsilon, device=device), axis=1))\n",
-    "            g_k = g_k + epsilon*(log_b - torch.logsumexp(Cost(f_k, g_k, grad, epsilon, device=device), axis=0))\n",
+    "            f_k = f_k + epsilon*(log_a - torch.logsumexp(utils__Cost(f_k, g_k, grad, epsilon, device=device), axis=1))\n",
+    "            g_k = g_k + epsilon*(log_b - torch.logsumexp(utils__Cost(f_k, g_k, grad, epsilon, device=device), axis=0))\n",
     "        elif not balanced and unbalanced:\n",
     "            # Unbalanced\n",
-    "            f_k = ubc*(f_k + epsilon*(log_a - torch.logsumexp(Cost(f_k, g_k, grad, epsilon, device=device), axis=1)) )\n",
-    "            g_k = ubc2*(g_k + epsilon*(log_b - torch.logsumexp(Cost(f_k, g_k, grad, epsilon, device=device), axis=0)) )\n",
+    "            f_k = ubc*(f_k + epsilon*(log_a - torch.logsumexp(utils__Cost(f_k, g_k, grad, epsilon, device=device), axis=1)) )\n",
+    "            g_k = ubc2*(g_k + epsilon*(log_b - torch.logsumexp(utils__Cost(f_k, g_k, grad, epsilon, device=device), axis=0)) )\n",
     "        else:\n",
     "            # Semi-relaxed\n",
-    "            f_k = (f_k + epsilon*(log_a - torch.logsumexp(Cost(f_k, g_k, grad, epsilon, device=device), axis=1)) )\n",
-    "            g_k = ubc*(g_k + epsilon*(log_b - torch.logsumexp(Cost(f_k, g_k, grad, epsilon, device=device), axis=0)) )\n",
+    "            f_k = (f_k + epsilon*(log_a - torch.logsumexp(utils__Cost(f_k, g_k, grad, epsilon, device=device), axis=1)) )\n",
+    "            g_k = ubc*(g_k + epsilon*(log_b - torch.logsumexp(utils__Cost(f_k, g_k, grad, epsilon, device=device), axis=0)) )\n",
     "\n",
-    "    P = torch.exp(Cost(f_k, g_k, grad, epsilon, device=device))\n",
+    "    P = torch.exp(utils__Cost(f_k, g_k, grad, epsilon, device=device))\n",
     "    \n",
     "    return P\n",
     "\n",
