Start cleaning ImageNet.ipynb

--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -723,7 +723,7 @@
     "    One_rr = torch.outer(one_r, one_r).to(device)\n",
     "    \n",
     "    if Wasserstein:\n",
-    "        gradQ, gradR = Wasserstein_Grad(C, Q, R, Lambda, device, \\\n",
+    "        gradQ, gradR = gd__Wasserstein_Grad(C, Q, R, Lambda, device, \\\n",
     "                   dtype=dtype, full_grad=full_grad)\n",
     "        \n",
     "    elif A is not None and B is not None:\n",
@@ -756,7 +756,7 @@
     "        \n",
     "        # Readjust cost for FGW problem\n",
     "        if FGW:\n",
-    "            gradQW, gradRW = Wasserstein_Grad(C, Q, R, Lambda, device, \\\n",
+    "            gradQW, gradRW = gd__Wasserstein_Grad(C, Q, R, Lambda, device, \\\n",
     "                   dtype=dtype, full_grad=full_grad)\n",
     "            gradQ = (1-alpha)*gradQW + alpha*gradQ\n",
     "            gradR = (1-alpha)*gradRW + alpha*gradR\n",
