Start cleaning ImageNet.ipynb

--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -1987,7 +1987,7 @@
     "print(f\"Loaded {len(imagenet_dataset)} images from ImageNet!\")\n",
     "\n",
     "\n",
-    "model_path = os.path.expanduser(\"~/.cache/torch/hub/checkpoints/resnet50-0676ba61.pth\")\n",
+    "model_path = os.path.expanduser(\"resnet50-0676ba61.pth\")\n",
     "\n",
     "# Load pretrained ResNet model\n",
     "model = models.resnet50()\n",
@@ -2037,7 +2037,7 @@
    "source": [
     "import pickle\n",
     "\n",
-    "save_dir = \"/scratch/gpfs/ph3641/hr_ot/\"\n",
+    "save_dir = \"\"\n",
     "\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "save_path = os.path.join(save_dir, \"embeddings.pkl\")\n",
@@ -2064,7 +2064,7 @@
    ],
    "source": [
     "import pickle\n",
-    "emb_dir = '/scratch/gpfs/ph3641/hr_ot/embeddings.pkl'\n",
+    "emb_dir = 'embeddings.pkl'\n",
     "\n",
     "# Load embeddings from the pickle file\n",
     "with open(emb_dir, \"rb\") as f:\n",
@@ -3997,7 +3997,7 @@
     "    mat[k, 0] = idx1.cpu().numpy()\n",
     "    mat[k, 1] = idx2.cpu().numpy()\n",
     "\n",
-    "np.save('/scratch/gpfs/ph3641/hr_ot/embedding_alignment.npy', mat)"
+    "np.save('embedding_alignment.npy', mat)"
    ]
   },
   {
@@ -4015,7 +4015,7 @@
     }
    ],
    "source": [
-    "mat = np.load('/scratch/gpfs/ph3641/hr_ot/embedding_alignment.npy')\n",
+    "mat = np.load('embedding_alignment.npy')\n",
     "print(mat.shape)"
    ]
   }
